feat: 使用者若無登入直接進入商品頁面，會被導回登入頁面

--- a/products.html
+++ b/products.html
@@ -250,6 +250,10 @@
         methods: {
           // 檢查是否登入
           checkLogin() {
+            // 如果沒有登入進入 products，就轉到登入
+            if (document.cookie === 'userToken=""') {
+              window.location.href = "login.html";
+            }
             const token = document.cookie.replace(
               // userToken 剛剛定義的Token名稱
               /(?:(?:^|.*;\s*)userToken\s*\=\s*([^;]*).*$)|^.*$/,
