--- a/login.html
+++ b/login.html
@@ -100,12 +100,9 @@
               })
 
               .catch((err) => {
-                console.log(err.data);
+                alert(err.data.message);
               });
           },
-        },
-        mounted() {
-          console.log(this.url, this.path);
         },
       }).mount("#app");
     </script>
